Add verifytoken check for qn history
-Add verifytoken check before creating and updating question history
-Removing unnecessary API
-fix bug with hasSubmitted
