# backend/qn-history-service/swagger.yml
@@ -255,40 +255,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/definitions/ServerError"
-    delete:
-      tags:
-        - qnhistories
-      summary: Deletes a question history
-      description: Deletes a question history
-      parameters:
-        - in: path
-          name: id
-          type: string
-          required: true
-          description: Question history id
-      responses:
-        200:
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    description: Message
-        404:
-          description: Question History Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/definitions/Error"
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/definitions/ServerError"
     get:
       tags:
         - qnhistories
